--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "rescap",
+  "name": "sukurin",
   "version": "0.0.0",
   "description": "Capture screenshots",
   "repository": {
     "type": "git",
-    "url": "git://github.com/maxkueng/rescap.git"
+    "url": "git://github.com/maxkueng/sukurin.git"
   },
   "main": "index.js",
   "author": "Max Kueng <me@maxkueng.com> (http://maxkueng.com/)",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/maxkueng/rescap/raw/master/LICENSE"
+      "url": "https://github.com/maxkueng/sukurin/raw/master/LICENSE"
     }
   ],
   "dependencies": {
