--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "shashin",
   "version": "0.0.0",
-  "description": "Capture screenshots",
+  "description": "Capture responsive screenshots using PhantomJS",
   "repository": {
     "type": "git",
     "url": "git://github.com/maxkueng/shashin.git"
+  },
+  "scripts": {
+    "test": "tape test/*.js | tap-spec"
   },
   "main": "index.js",
   "author": "Max Kueng <me@maxkueng.com> (http://maxkueng.com/)",
@@ -18,8 +21,15 @@
     "base64-stream": "^0.1.2",
     "es5-shim": "^4.0.3",
     "file-url": "^1.0.0",
-    "object-assign": "^1.0.0",
+    "merge": "^1.2.0",
     "phantomjs": "^1.9.7-15",
     "viewportsizes": "0.0.1"
+  },
+  "devDependencies": {
+    "express": "^4.9.4",
+    "image-size": "^0.3.3",
+    "tap-spec": "^1.0.0",
+    "tape": "^3.0.0",
+    "wrappy": "^1.0.1"
   }
 }
