--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "es5-shim": "^4.0.3",
     "file-url": "^1.0.0",
     "merge": "^1.2.0",
+    "object-hash": "^0.3.0",
     "phantomjs": "^1.9.7-15",
     "viewportsizes": "0.0.2"
   },
