--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "viewportsizes": "0.0.2"
   },
   "devDependencies": {
+    "async": "^0.9.0",
     "express": "^4.9.4",
     "image-size": "^0.3.3",
     "tap-spec": "^1.0.0",
