--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "git://github.com/maxkueng/shashin.git"
   },
   "scripts": {
-    "test": "tape test/*.js | tap-spec"
+    "test": "tape test/*.js | tap-spec",
+    "test-short": "tape test/shashin.js | tap-spec"
   },
   "main": "index.js",
   "author": "Max Kueng <me@maxkueng.com> (http://maxkueng.com/)",
@@ -24,7 +25,7 @@
     "merge": "^1.2.0",
     "object-hash": "^0.3.0",
     "phantomjs": "^1.9.7-15",
-    "viewportsizes": "0.0.2"
+    "viewportsizes": "0.1.2"
   },
   "devDependencies": {
     "async": "^0.9.0",
